<resources>
    <!-- lab3 available -->
    <string name="app_name">Lab6</string>
    <string name="wigdet_message">Here are my widgets:</string>
    <string name="ButtonText">Button</string>
    <string name="checkBox">Check this out!</string>
    <string name="switchBox">Switch on / off</string>
    <string name="hint">Type your answer here</string>

    <!-- lab4 available -->
    <string name="txtEmail">Enter your email address:</string>
    <string name="txtEmailHint">Type email here</string>
    <string name="txtPass">Type your password:</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtProfile">Your profile:</string>
    <string name="txtProName">Your name:</string>
    <string name="txtProEmail">Your email:</string>
    <string name="txtProPicture">Your picture:</string>
    <string name="txtProClick">Click the button above  to take a picture</string>

    <!-- lab5 available -->
    <string name="buttonSend">SEND</string>
    <string name="buttonReceive">RECEIVE</string>
    <string name="buttonGotoChat">Goto Chat</string>


    <!-- lab6 available -->

    <string name="buttonGotoToolbar">Goto Toolbar</string>
    <string name="menuName1">Choice 1</string>
    <string name="menuName2">Choice 2</string>
    <string name="menuName3">Choice 3</string>
    <string name="menuName4">You clicked on the overflow menu</string>
    <string name="search">Search</string>
    <string name="aButton">Go Back?</string>


</resources>
