<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menuItem1"
        android:title="@string/menuName1"
        android:icon="@drawable/inimessage"
        android:orderInCategory="1001"
        app:showAsAction="always"/>

    <item android:id="@+id/menuItem2"
        android:title="@string/menuName2"
        android:icon="@drawable/inputmessage"
        android:orderInCategory="1002"
        app:showAsAction="always"/>

    <item android:id="@+id/menuItem3"
        android:title="@string/menuName3"
        android:icon="@drawable/nf_news"
        android:orderInCategory="1003"
        app:showAsAction="always"/>

    <item android:id="@+id/menuItem4"
        android:title="@string/menuName4"
        android:icon="@drawable/nas_search"
        android:orderInCategory="1004"
        app:showAsAction="never"/>

    <item android:id="@+id/search_item"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="always|collapseActionView"
        android:title="@string/search"/>
</menu>