<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wigdet_message"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/imageButton"
        android:text="@string/ButtonText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_alignParentRight="true"
        android:src="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/imageButton"
        android:text="@string/checkBox" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignParentRight="true"
        android:layout_toStartOf="@id/imageButton"
        android:text="@string/switchBox" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/checkBox"
        android:inputType="textPersonName"/>

</RelativeLayout>
